# manim-list_operations

team-33/: LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
team-33/examples/: in-python-render.py  main.py
team-33/src/zoomagrams/: __init__.py  rendering.py
team-33/src/zoomagrams/config/: __init__.py  config.py  default_config.toml
team-33/src/zoomagrams/list/: __init__.py  list.py  list_cell.py
team-33/src/zoomagrams/subcaptions/: __init__.py  subcaptions.py
team-33/src/zoomagrams/tree/: __init__.py  node.py  tree.py
