[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomagrams"
version = "1.0.0"
authors = [
  { name="Johan Grobler", email="chris.grobler@windowslive.com" },
  { name="Sebastian Simpson", email="ssim289@aucklanduni.ac.nz" },
  { name="Owen Sugiharto", email="osug973@aucklanduni.ac.nz" },
  { name="Yao Zhong", email="yzho167@aucklanduni.ac.nz" }
]
description = "Programmatically animate common data structures and list operations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies =[
    "manim~=0.16.0.post0",
    "tomli~=2.0.1"
]

[tool.setuptools.package-data]
"*" = ["*.toml"]